Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -181,9 +181,13 @@ print(x)
 &nbsp;
 ### 4.5 Instrukcja if-elif-(else)
 Kolejnym rozwinięciem instrukcji `if` oraz `if-else` jest `if-elif-else`. Używamy jej wtedy kiedy chcemy wykonać jeden z wielu bloków kodu, z których każdy poprzedzony jest warunkiem logicznym. Aby dany blok kodu się wykonał, odpowiadający mu warunek logiczny musi zostać spełniony. Instrukcja `if-elif-else` składa się z następujących elementów:
-*if* - dd
-*elif* - dd
-*else* - dd
+*if* - pierwszy warunek logiczny. Jeżeli zostanie spełniony to wykonuje się blok kodu pod nim
+
+*elif* - kolejny warunek. Jeżeli zostane spełniony to wykonuje się blok kodu pod nim. *elifów* może być dowolnie dużo
+
+*else* - można ale nie trzeba na koniec dodać klauzulę *else* pod którą znajduje się blok kodu, który zostanie wykonany jeżeli żaden z powyższych warunków logicznych nie został spełniony
+
+
 
 ---
 ---
