Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -183,12 +183,64 @@ print(x)
 Kolejnym rozwinięciem instrukcji `if` oraz `if-else` jest `if-elif-else`. Używamy jej wtedy kiedy chcemy wykonać jeden z wielu bloków kodu, z których każdy poprzedzony jest warunkiem logicznym. Aby dany blok kodu się wykonał, odpowiadający mu warunek logiczny musi zostać spełniony. Instrukcja `if-elif-else` składa się z następujących elementów:
 *if* - pierwszy warunek logiczny. Jeżeli zostanie spełniony to wykonuje się blok kodu pod nim
 
-*elif* - kolejny warunek. Jeżeli zostane spełniony to wykonuje się blok kodu pod nim. *elifów* może być dowolnie dużo
+*elif* - kolejny warunek. Jeżeli zostanie spełniony to wykonuje się blok kodu pod nim. *elifów* może być dowolnie dużo
 
 *else* - można ale nie trzeba na koniec dodać klauzulę *else* pod którą znajduje się blok kodu, który zostanie wykonany jeżeli żaden z powyższych warunków logicznych nie został spełniony
 
+```python
+human_power = 6
+zombie_power = 5
+
+if human_power > zombie_power:
+    print("Wygrywa człowiek")
+elif human_power < zombie_power:
+    print("Wygrywa zombie")
+else:
+    print("Remis")
+```
 
 
+```python
+number_of_humans = 1
+number_of_zombies = 0
+
+if number_of_humans > 0 and number_of_zombies ＝＝ 0:
+    print("Wygrali ludzie. Wychodzimy z ifa.")
+    
+elif number_of_humans ＝＝ 0 and number_of_zombies ＝＝ 0:
+    print("Wszyscy zginęli. Wychodzimy z ifa")
+
+elif number_of_humans ＝＝ 0 and number_of_zombies > 0:
+    print("Wygrali zombie. Wychodzimy z ifa")
+
+elif True:
+    print("Zawsze prawdziwe, ale wykona się tylko jeśli poprzednie warunki nie będą spełnione")
+
+```
+
+Instrukcje warunkowe mogą być w sobie zagnieżdżone:
+```python
+MAX_NUMBER_OF_ITERATIONS = 100
+current_iteration = 90
+
+if current_iteration >＝ MAX_NUMBER_OF_ITERATIONS:
+    print("Koniec symulacji")
+else:
+    if human_power > zombie_power:
+        print("Wygrywa człowiek")
+    elif human_power < zombie_power:
+        print("Wygrywa zombie")
+    else:
+        print("Remis")
+```
+
+
+---
+**Instrukcja `if-elif-(else)` - podsumowanie:**
+- Aby wykonać dokładnie jeden spośród wielu bloków kodu do których przypisane są warunki logiczne należy użyć instrukcji `if-elif-(else)`
+- Klauzula `if` musi być użyta dokładnie raz, `elif` dowolną liczbę razy a `else` może, ale nie musi być użyte
+- Instrukcje warunkowe mogą być w sobie zagnieżdżone
+- Kiedy jeden z warunków zostanie spełniony zostaje wykonany kod po nim po czym następuje wyjście z instrukcji warunkowej 
 ---
 ---
 ---
