Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -198,6 +198,7 @@ elif human_power < zombie_power:
 else:
     print("Remis")
 ```
+"Wygrywa człowiek"
 
 
 ```python
@@ -217,6 +218,7 @@ elif True:
     print("Zawsze prawdziwe, ale wykona się tylko jeśli poprzednie warunki nie będą spełnione")
 
 ```
+"Wygrali ludzie. Wychodzimy z ifa."
 
 Instrukcje warunkowe mogą być w sobie zagnieżdżone:
 ```python
