Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -143,6 +143,7 @@ if number_of_zombies ＝＝ 0 or number_of_humans ＝＝ 0:
 else:
     print("Symulacja trwa nadal")
 ```
+"Koniec symulacji"
 
 ```python
 human_experience = 3
@@ -215,11 +216,13 @@ elif number_of_humans ＝＝ 0 and number_of_zombies > 0:
     print("Wygrali zombie. Wychodzimy z ifa")
 
 elif True:
-    print("Zawsze prawdziwe, ale wykona się tylko jeśli poprzednie warunki nie będą spełnione")
+    print("Zawsze prawdziwe, ale wykona się tylko jeśli poprzednie"
+          "warunki nie będą spełnione")
 
 ```
 "Wygrali ludzie. Wychodzimy z ifa."
 
+---
 Instrukcje warunkowe mogą być w sobie zagnieżdżone:
 ```python
 MAX_NUMBER_OF_ITERATIONS = 100
