Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -203,8 +203,8 @@ else:
 
 
 ```python
-number_of_humans = 1
-number_of_zombies = 0
+number_of_humans = 0
+number_of_zombies = 1
 
 if number_of_humans > 0 and number_of_zombies ＝＝ 0:
     print("Wygrali ludzie. Wychodzimy z ifa.")
@@ -216,11 +216,11 @@ elif number_of_humans ＝＝ 0 and number_of_zombies > 0:
     print("Wygrali zombie. Wychodzimy z ifa")
 
 elif True:
-    print("Zawsze prawdziwe, ale wykona się tylko jeśli poprzednie"
+    print("Zawsze prawdziwe, ale wykona się tylko jeśli poprzednie "
           "warunki nie będą spełnione")
 
 ```
-"Wygrali ludzie. Wychodzimy z ifa."
+"Wygrali zombie. Wychodzimy z ifa."
 
 ---
 Instrukcje warunkowe mogą być w sobie zagnieżdżone:
