--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -32,6 +32,12 @@ no_value = None
 ```
 
 ---
+W Pythonie nie istnieją stałe, czyli obiekty podobne do zmiennych, ale nie mogące zmieniać swojej wartości w trakcie działania programu. Jeśli jednak chcemy stworzyć zmienną, której wartość nie powinna być nadpisywana to zgodnie z konwencją zapisujemy ją wielkimi literami:
+```python
+PI = 3.1415926
+```
+
+---
 **Definiowanie zmiennych - podsumowanie:**
 - Do utworzenia zmiennej potrzebne są: **nazwa zmiennej, znak równości oraz wartość zmiennej**. Nie musimy deklarować jej typu. Wynika to z tego, że Python jest językiem typowanym dynamicznie
 - Nazwa zmiennej może zawierać tylko litery, cyfry oraz znak _ . Nie może zaczynać się od cyfry
