Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -123,11 +123,33 @@ if human_power > zombie_power:
     print("Walkę wygrywa człowiek")
 ```
 
+---
+
+Warunkiem logicznym w instrukcji warunkowej może być nie tylko wyrażenie, które zwraca *True* lub *False*. To co znajduje się po słowie kluczowym `if` jest najpierw rzutowane na wartość logiczną funkcją `bool()`. W związku z tym jeśli zamiast typowego warunku logicznego użyjemy np. stringa, inta, listy itd. to instrukcja również zadziała. Wartości takie jak 0, pusty string czy pusta lista / tupla będą zachowywać się jak *False*.
+
+```python
+if not []:    # not [] --> not False --> True
+    print("Pusta lista")
+```
+Pusta lista
+
+```python
+if not "":  # not "" --> not False --> True
+    print("Pusty string")
+```
+Pusty string
+
+```python
+if not 0:   # not 0 --> not False --> True
+    print("Zero")
+```
+Zero
 
 ---
 **Instrukcja `if` - podsumowanie:**
 - Aby uzależnić wykonanie fragmentu kodu od tego czy spełniony został określony warunek logiczny używamy instrukcji warunkowych
 - Instrukcja warunkowa składa się ze słowa kluczowego `if`, warunku logicznego, dwukropka oraz wciętego bloku kodu
+- Jeśli zamiast warunku logicznego użyjemy innego obiektu - np. stringa, inta czy listy - zostanie on zrzutowany na `bool` a następnie użyty do określenia czy blok kodu ma zostać wykonany
 ---
 ---
 ---
@@ -173,9 +195,20 @@ print(x)
 2
 
 ---
+Python umożliwia również pisanie instrukcji `if-else` w skrócony sposób:
+```python
+human_power = 4
+zombie_power = 3
+
+winner = "human" if human_power > zombie_power else "zombie"
+```
+
+---
+
 **Instrukcja `if-else` - podsumowanie:**
 - Aby wykonać jeden z dwóch bloków kodu w zależności od tego czy określony warunek logiczny zostanie spełniony należy użyć instrukcji `if-else`
 - Każdy z bloków powinien być wcięty, słowa kluczowe `if` oraz `else` powinny być na tym samym poziomie wcięcia
+- Instrukcja `if-else` może być zapisana w skróconej jednolinijkowej formie aby przypisać do zmiennej różną wartość w zależności od tego czy spełniony jest warunek, czy nie
 ---
 ---
 ---
