--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -1,8 +1,28 @@
 ### 1.1 Informacje o języku
-test 123
+Python jest *wysokopoziomowym*, *interpretowanym*, *dynamicznie typowanym*, *obiektowym* językiem programowania *ogólnego przeznaczenia*.
 
-test 3453
+#### 1.1.1 Wysokopoziomowy
+Programując w Pythonie nie musisz dokładnie rozumieć jak działa komputer, w jaki sposób wykonywanie programu przekłada się na pracę procesora czy pamięci operacyjnej. Python operuje na wyższym poziomie abstrakcji dzięki czemu kodowanie w nim przypomina komunikację w języku angielskim.
 
+
+#### 1.1.2 Interpretowany
+Program przed uruchomieniem nie musi zostać skompilowany czyli zamieniony na kod maszynowy. Interpreter Pythona operuje wprost na kodzie źródłowym. Dzięki temu szybciej możemy uruchomić nasz kod, ale aby to zrobić potrzebujemy mieć dostęp do interpretera.
+
+
+
+#### 1.1.3 Dynamicznie typowany
+Podczas deklarowania zmiennych nie musimy deklarować jakiego typu jest dana zmienna (tekst, liczba itd.). Możemy również zmienić typ zmiennej już po jej utworzeniu. Dzięki temu kod można pisać szybciej i z mniejszymi restrykcjami, ale wydłuża to jego działanie i może negatywnie wpływać na czytelność kodu.
+
+
+#### 1.1.4 Obiektowy
+Wykorzystuje paradygmat programowania zorientowanego obiektowego (*Object Oriented Programming* - OOP). Więcej o tym w [[10. Programowanie obiektowe|dalszej części]].
+
+
+#### 1.1.5 Ogólnego przeznaczenia
+Możemy używać tego języka do wielu różnych zastosowań, takich jak: pisanie skryptów automatyzujących, web development, data science i machine learning, nauka programowania (ze względu na prostotę i niski próg wejścia).
+
+---
+Można spotkać Pythona w dwóch wersjach - Python 2.x oraz Python 3.x. Wersja 2.x nie jest już wspierana i nie powinna być dłużej używana. Python 3.x mniej więcej co roku ukazuje się w nowej wersji (3.8, 3.9, 3.10 itd.). Obecnie najnowsza wersja to 3.11.
 ---
 ---
 ---
