Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -28,10 +28,15 @@ Można spotkać Pythona w dwóch wersjach - Python 2.x oraz Python 3.x. Wersja 
 ---
 &nbsp;
 ### 1.2 Instalacja środowiska
-test 6655
+W Pythonie istnieje co najmniej kilka różnych możliwości stworzenia środowiska pracy. Przez środowisko można rozumieć zestaw narzędzi i konfiguracji, które pozwalają wykorzystać interpreter języka w określony sposób. Najbardziej popularne sposoby tworzenia środowisk w Pythonie to:
+- virtual environment
+- Anaconda
+- poetry
+- pipenv
 
-test 3545309
+Na niektórych systemach, np. Linux Ubuntu 20.04 interpter Pythona jest preinstalowany. Aby sprawdzić czy na Twoim systemie jest już Python wpisz do terminala / wiersza poleceń komendę `python` lub `python3`. Jeśli pojawi się podobny widok oznacza to że odpowiedź brzmi "tak":
 
+[[ubuntu_python3.png]]
 ---
 ---
 ---
