Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -23,6 +23,9 @@ Możemy używać tego języka do wielu różnych zastosowań, takich jak: pisani
 
 ---
 Można spotkać Pythona w dwóch wersjach - Python 2.x oraz Python 3.x. Wersja 2.x nie jest już wspierana i nie powinna być dłużej używana. Python 3.x mniej więcej co roku ukazuje się w nowej wersji (3.8, 3.9, 3.10 itd.). Obecnie najnowsza wersja to 3.11.
+
+
+
 ---
 ---
 ---
@@ -36,7 +39,7 @@ W Pythonie istnieje co najmniej kilka różnych możliwości stworzenia środowi
 
 Na niektórych systemach, np. Linux Ubuntu 20.04 interpter Pythona jest preinstalowany. Aby sprawdzić czy na Twoim systemie jest już Python wpisz do terminala / wiersza poleceń komendę `python` lub `python3`. Jeśli pojawi się podobny widok oznacza to że odpowiedź brzmi "tak":
 
-[[ubuntu_python3.png]]
+![[ubuntu_python3.png]]
 ---
 ---
 ---
