Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -11,7 +11,7 @@ Program przed uruchomieniem nie musi zostać skompilowany czyli zamieniony na ko
 
 
 #### 1.1.3 Dynamicznie typowany
-Podczas deklarowania zmiennych nie musimy deklarować jakiego typu jest dana zmienna (tekst, liczba itd.). Możemy również zmienić typ zmiennej już po jej utworzeniu. Dzięki temu kod można pisać szybciej i z mniejszymi restrykcjami, ale wydłuża to jego działanie i może negatywnie wpływać na czytelność kodu.
+Podczas definiowania zmiennych nie musimy deklarować jakiego typu jest dana zmienna (tekst, liczba itd.). Możemy również zmienić typ zmiennej już po jej utworzeniu. Dzięki temu kod można pisać szybciej i z mniejszymi restrykcjami, ale wydłuża to jego działanie i może negatywnie wpływać na czytelność kodu.
 
 
 #### 1.1.4 Obiektowy
@@ -40,6 +40,9 @@ W Pythonie istnieje co najmniej kilka różnych możliwości stworzenia środowi
 Na niektórych systemach, np. Linux Ubuntu 20.04 interpter Pythona jest preinstalowany. Aby sprawdzić czy na Twoim systemie jest już Python wpisz do terminala / wiersza poleceń komendę `python` lub `python3`. Jeśli pojawi się podobny widok oznacza to że odpowiedź brzmi "tak":
 
 ![[ubuntu_python3.png]]
+
+
+
 ---
 ---
 ---
