--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -38,7 +38,8 @@ W Pythonie istnieje co najmniej kilka różnych możliwości stworzenia środowi
 - pipenv
 
 Na niektórych systemach, np. Linux Ubuntu 20.04 interpter Pythona jest preinstalowany. Aby sprawdzić czy na Twoim systemie jest już Python wpisz do terminala / wiersza poleceń komendę `python` lub `python3`. Jeśli pojawi się podobny widok oznacza to że odpowiedź brzmi "tak": 
-![[ubuntupython.png]]
+
+![[ubuntu-python3.png]]
 
 
 
