Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -39,7 +39,7 @@ W Pythonie istnieje co najmniej kilka różnych możliwości stworzenia środowi
 
 Na niektórych systemach, np. Linux Ubuntu 20.04 interpter Pythona jest preinstalowany. Aby sprawdzić czy na Twoim systemie jest już Python wpisz do terminala / wiersza poleceń komendę `python` lub `python3`. Jeśli pojawi się podobny widok oznacza to że odpowiedź brzmi "tak": 
 
-![[ubuntu-python3.png]]
+![[ubuntu_python3.png]]
 
 
 
