Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -39,9 +39,24 @@ W Pythonie istnieje co najmniej kilka różnych możliwości stworzenia środowi
 
 Na niektórych systemach, np. Linux Ubuntu 20.04 interpter Pythona jest preinstalowany. Aby sprawdzić czy na Twoim systemie jest już Python wpisz do terminala / wiersza poleceń komendę `python` lub `python3`. Jeśli pojawi się podobny widok oznacza to że odpowiedź brzmi "tak": 
 
-![[ubuntu_python3.png]]
+![[ubuntu-python3.png]]
+
+Mimo to na początku nauki programowania w Pythonie warto zainstalować pakiet Anaconda, ze względu na wygodę jego użytkowania oraz niski próg wejścia.
 
 
+#### 1.2.1 Instalacja Anacondy
+
+**Windows:**
+1. Pobierz instalator Anacondy
+![[anaconda1.png]]
+
+2. Instalacja jest dosyć standardowa. Możesz zmienić folder, w którym pakiet zostanie zainstalowany, ale bezpieczniej będzie pozostawić go domyślnym
+![[anaconda2.png]]
+
+3. Pomimo tego że instalator to odradza, dodaj Anaconda3 do zmiennej środowiskowej PATH! Ułatwi to dalszą konfigurację
+![[anaconda3.png]]
+
+Po instalacji wpisz w terminalu / wierszu poleceń `python` a następnie `print("Hello world")`.
 
 
 
