Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -41,10 +41,12 @@ Na niektórych systemach, np. Linux Ubuntu 20.04 interpter Pythona jest preinsta
 
 ![[ubuntu-python3.png]]
 
-Mimo to na początku nauki programowania w Pythonie warto zainstalować pakiet Anaconda, ze względu na wygodę jego użytkowania oraz niski próg wejścia.
+Mimo to na początku nauki programowania w Pythonie warto zainstalować pakiet Anaconda, ze względu na wygodę jego użytkowania oraz niski próg wejścia. Korzystanie z Anacondy ma pewne wady, ale na początku nauki nie będą one uciążliwe.
 
 
 #### 1.2.1 Instalacja Anacondy
+
+Instalator Anacondy możesz pobrać ze strony https://www.anaconda.com/products/distribution
 
 **Windows:**
 1. Pobierz instalator Anacondy
