Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -67,7 +67,14 @@ Po instalacji wpisz w terminalu / wierszu poleceń `python` a następnie `print
 ---
 &nbsp;
 ### 1.3 PyCharm - utworzenie projektu
-...
+Interpreter Python pozwala nam uruchamiać kod, ale potrzebujemy jeszcze narzędzia w którym będziemy ten kod pisać. Co prawda możemy do tego wykorzystać dowolny edytor tekstu, ponieważ kod to tak naprawdę zwykły _plain text_, jednak istnieją narzędzia które nadają się do tego znacznie lepiej. Są to tak zwane IDE (ang. Integrated Development Environment). Zawierają one nie tylko edytor tekstu, ale również zapewniają kolorowanie składni, debugger i wiele innych funkcji, które ułatwią nam pracę.
+
+Istnieje wiele IDE, z których każde ma swoje zalety i wady. Jednym z najczęściej wykorzystywanych IDE dla Pythona jest [PyCharm](https://www.jetbrains.com/pycharm/download). Nas interesuje wersja Community. Po instalacji otwórz PyCharma oraz utwórz nowy projekt.
+
+![[pycharm1.png]]
+
+![[pycharm2.png]]
+
 
 ---
 ---
