Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -81,8 +81,9 @@ Istnieje wiele IDE, z których każde ma swoje zalety i wady. Jednym z najczęś
 ---
 &nbsp;
 ### 1.4 PyCharm - elementy IDE
-...
+![[pycharm3.png]]
 
+1. Menu główne
 ---
 ---
 ---
