Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -84,6 +84,11 @@ Istnieje wiele IDE, z których każde ma swoje zalety i wady. Jednym z najczęś
 ![[pycharm3.png]]
 
 1. Menu główne
+2. Drzewo projektu
+3. Edytor
+4. Konfiguracja projektu
+5. Uruchamianie i debugger
+6. Konsola Pythona
 ---
 ---
 ---
