Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -94,7 +94,23 @@ Istnieje wiele IDE, z których każde ma swoje zalety i wady. Jednym z najczęś
 ---
 &nbsp;
 ### 1.5 Jupyter Notebook
-...
+Alternatywą dla korzystania z IDE takich jak PyCharm jest [Jupyter Notebook](https://jupyter.org/) i podobne do niego narzędzia - na przykład JupyterLab, [Colab](https://colab.research.google.com/) czy [DataSpell](https://www.jetbrains.com/dataspell/) od JetBrains. Pozwalają one pisać kod przeplatany tekstem w formacie Markdown. Podejście do organizacji i uruchamiania kodu jest w tych narzędziach inne niż przy pracy ze standardowymi plikami *.py* z kodem Pythona.
+
+Zarówno kod jak i tekst jest tam podzielony na komórki, które uruchamiane są pojedynczo. Takie podejście ma swoje plusy i minusy przez co Jupyter Notebook nie jest narzędziem uniwersalnym. Pliki JN nazywamy notebookami i mają rozszerzenie .ipynb (*IPython Notebook*).
+
+**Format notebooków sprawdzi się między innymi:**
+- Do szybkich testów, eksperymentów i poznawania na przykład nowych bibliotek
+- Do analizy, eksploracji i wizualizacji danych oraz tworzenia prototypów algorytmów ML 
+- Do tutoriali, w których chcemy zarówno zawrzeć kod jak i opisać rozwiązanie problemu w formie tekstu
+
+**Notebooki nie nadają się do:**
+- Pisania kodu produkcyjnego
+- Pisania skryptów wykonywalnych
+
+
+Widok zawartości notebooka wygląda mniej więcej tak:
+![[jupyter.png]]
+
 
 ---
 ---
