Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -37,7 +37,7 @@ W Pythonie istnieje co najmniej kilka różnych możliwości stworzenia środowi
 - poetry
 - pipenv
 
-Na niektórych systemach, np. Linux Ubuntu 20.04 interpter Pythona jest preinstalowany. Aby sprawdzić czy na Twoim systemie jest już Python wpisz do terminala / wiersza poleceń komendę `python` lub `python3`. Jeśli pojawi się podobny widok oznacza to że odpowiedź brzmi "tak": 
+Na niektórych systemach, np. Linux Ubuntu 20.04 interpreter Pythona jest preinstalowany. Aby sprawdzić czy na Twoim systemie jest już Python wpisz do terminala / wiersza poleceń komendę `python` lub `python3`. Jeśli pojawi się podobny widok oznacza to że odpowiedź brzmi "tak": 
 
 ![[ubuntu-python3.png]]
 
@@ -46,7 +46,7 @@ Mimo to na początku nauki programowania w Pythonie warto zainstalować pakiet A
 
 #### 1.2.1 Instalacja Anacondy
 
-Instalator Anacondy możesz pobrać ze strony https://www.anaconda.com/products/distribution
+Instalator Anacondy możesz pobrać ze strony [https://www.anaconda.com/products/distribution](https://www.anaconda.com/products/distribut)
 
 **Windows:**
 1. Pobierz instalator Anacondy
@@ -58,7 +58,10 @@ Instalator Anacondy możesz pobrać ze strony https://www.anaconda.com/products/
 3. Pomimo tego że instalator to odradza, dodaj Anaconda3 do zmiennej środowiskowej PATH! Ułatwi to dalszą konfigurację
 ![[anaconda3.png]]
 
-Po instalacji wpisz w terminalu / wierszu poleceń `python` a następnie `print("Hello world")`.
+Po instalacji wpisz w terminalu / wierszu poleceń `python` a następnie `print("Hello world")`. Efekt powinien być podobny jak na poniższym obrazku:
+![[anaconda4.png]]
+
+
 
 
 
