Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -114,6 +114,9 @@ Zarówno kod jak i tekst jest tam podzielony na komórki, które uruchamiane są
 Widok zawartości notebooka wygląda mniej więcej tak:
 ![[jupyter.png]]
 
+---
+Ponieważ Jupyter Notebook jest częścią pakietu Anaconda, nie wymaga on dodatkowej instalacji. Aby go uruchomić wpisz w terminal / wiersz poleceń `jupyter-notebook`. Powinno otworzyć się okno przeglądarki, w którym zobaczysz foldery i pliki z Twojego filesystemu w lokalizacji w której otwarty został JN. Możesz również najpierw przejść w terminalu / wierszu poleceń do właściwego folderu a dopiero potem uruchomić JN.
+
 
 ---
 ---
