Just another update

--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -22,7 +22,7 @@ Wykorzystuje paradygmat programowania zorientowanego obiektowego (*Object Orient
 Możemy używać tego języka do wielu różnych zastosowań, takich jak: pisanie skryptów automatyzujących, web development, data science i machine learning, nauka programowania (ze względu na prostotę i niski próg wejścia).
 
 ---
-Można spotkać Pythona w dwóch głównych wersjach - Python 2.x oraz Python 3.x. Wersja 2.x nie jest już wspierana i nie powinna być dłużej używana. Python 3.x mniej więcej co roku ukazuje się w nowej wersji (3.8, 3.9, 3.10 itd.). Obecnie najnowszy jest Python 3.11.
+Można spotkać Pythona w dwóch głównych wersjach - 2.x oraz 3.x. Wersja 2 nie jest już wspierana i nie powinna być dłużej używana. Python 3 mniej więcej co roku ukazuje się w nowej wersji (3.8, 3.9, 3.10 itd.). Obecnie najnowszy jest Python 3.11.
 
 
 
@@ -46,7 +46,7 @@ Mimo to na początku nauki programowania w Pythonie warto zainstalować pakiet A
 
 #### 1.2.1 Instalacja Anacondy
 
-Instalator Anacondy możesz pobrać ze strony [https://www.anaconda.com/products/distribution](https://www.anaconda.com/products/distribut)
+Instalator Anacondy możesz pobrać ze strony [https://www.anaconda.com/products/distribution](https://www.anaconda.com/products/distribution)
 
 **Windows:**
 1. Pobierz instalator Anacondy
@@ -70,7 +70,7 @@ Po instalacji wpisz w terminalu / wierszu poleceń `python` a następnie `print
 ---
 &nbsp;
 ### 1.3 PyCharm - utworzenie projektu
-Interpreter Python pozwala nam uruchamiać kod, ale potrzebujemy jeszcze narzędzia w którym będziemy ten kod pisać. Co prawda możemy do tego wykorzystać dowolny edytor tekstu, ponieważ kod to tak naprawdę zwykły _plain text_, jednak istnieją narzędzia które nadają się do tego znacznie lepiej. Są to tak zwane IDE (ang. Integrated Development Environment). Zawierają one nie tylko edytor tekstu, ale również zapewniają kolorowanie składni, debugger i wiele innych funkcji, które ułatwią nam pracę.
+Interpreter Pythona pozwala nam uruchamiać kod, ale potrzebujemy jeszcze narzędzia w którym będziemy ten kod pisać. Co prawda możemy do tego wykorzystać dowolny edytor tekstu, ponieważ kod to tak naprawdę zwykły _plain text_, jednak istnieją narzędzia które nadają się do tego znacznie lepiej. Są to tak zwane IDE (ang. Integrated Development Environment). Zawierają one nie tylko edytor tekstu, ale również zapewniają kolorowanie składni, debugger i wiele innych funkcji, które ułatwią nam pracę.
 
 Istnieje wiele IDE, z których każde ma swoje zalety i wady. Jednym z najczęściej wykorzystywanych IDE dla Pythona jest [PyCharm](https://www.jetbrains.com/pycharm/download). Nas interesuje wersja Community. Po instalacji otwórz PyCharma oraz utwórz nowy projekt.
 
