Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -1,5 +1,5 @@
 ### 2.1 Definiowanie zmiennych
-Aby przechować określoną wartość w pamięci komputera należy utworzyć obiekt nazywany zmienną. Zmienna to wydzielone w pamięci komputera miejsce, które przechowuje określoną wartość i do którego odwołujemy się poprzez jej nazwę. Zmienna może być m.in. typu tekstowego, liczbowego (liczba całkowita lub niecałkowita) czy logicznego. Ponieważ **Python jest językiem programowania typowanym dynamicznie**, nie trzeba deklarować typu zmiennej podczas jej definiowania.
+Aby przechować określoną wartość w pamięci komputera należy utworzyć **zmienną**. Zmienna to odniesienie (referencja) między pewną nazwą a wydzielonym w pamięci komputera miejscem, które przechowuje określoną wartość i do którego odwołujemy się poprzez użycie zmiennej. Zmienna może być m.in. typu tekstowego, liczbowego (liczba całkowita lub niecałkowita) czy logicznego. Ponieważ **Python jest językiem programowania typowanym dynamicznie**, nie trzeba deklarować typu zmiennej podczas jej definiowania.
 
 ---
 >Kiedy do tej samej zmiennej przypiszemy nową wartość, stara wartość zostaje zapomniana.
@@ -39,11 +39,12 @@ PI = 3.1415926
 
 ---
 **Definiowanie zmiennych - podsumowanie:**
-- Do utworzenia zmiennej potrzebne są: **nazwa zmiennej, znak równości oraz wartość zmiennej**. Nie musimy deklarować jej typu. Wynika to z tego, że Python jest językiem typowanym dynamicznie
+- Do utworzenia zmiennej potrzebne są: **nazwa zmiennej, operator przypisania (znak równości) oraz wartość zmiennej**. Nie musimy deklarować jej typu. Wynika to z tego, że Python jest językiem typowanym dynamicznie
 - Nazwa zmiennej może zawierać tylko litery, cyfry oraz znak _ . Nie może zaczynać się od cyfry
 - Aby utworzyć zmienną typu tekstowego (string) należy podać wartość w pojedynczych albo podwójnych cudzysłowach
 - Separatorem dziesiętnym w liczbach niecałkowitych jest kropka
 - Istnieje specjalny rodzaj zmiennej służący do przechowywania braku wartości - **None**
+- Jeśli chcemy utworzyć tzw. stałą czyli zmienną, której wartość nie powinna ulec zmianie to zgodnie z konwencją używamy do tego wielkich liter
 ---
 ---
 ---
@@ -159,13 +160,61 @@ Próba rzutowania niektórych typów zakończy się błędem programu. Nie może
 ```python
 int("zombie")  # to nie zadziała
 ```
+---
+Aby sprawdzić czy dany obiekt jest określonego typu (jest instancją określonej klasy) używamy funkcji wbudowanej `isinstance`:
+```python
+isinstance(character_class, str)
+
+# True
+```
+Zmienna `character_class` jest typu `str`. Innymi słowy jest instancją klasy `str`.
+
+
+```python
+isinstance(no_value, type(None))
+
+# True
+```
+Zmienna `no_value` jest instancją klasy *NoneType*, do której możemy się odnieść poprzez `type(None)`
+
+
+```python
+isinstance(character_id, bool)
+
+# False
+```
+Zmienna `character_id` nie jest typu `bool`.
+
+
+```python
+isinstance(is_alive, bool)
+
+# True
+```
+Zmienna `is_alive` jest typu `bool`.
+
+
+```python
+isinstance(is_alive, int)
+
+# True
+```
+Tutaj niespodzianka - zmienna `is_alive` jest typu `int`, choć wcześniej widzieliśmy że jest typu `bool`. Wynika to z tego że *bool* jest podklasą klasy *int*. Można powiedzieć że każdy bool jest intem ale w drugą stronę ta relacja nie obowiązuje.
+
+```python
+issubclass(bool, int)
+
+# True
+```
+
 
 ---
 **Typy - podsumowanie:**
 - Każdy obiekt w Pythonie ma określony typ
 - Aby sprawdzić jaki on jest używamy funkcji `type`
-- Najczęściej spotykane typy zmiennych to: string, int, float, bool
+- Najczęściej spotykane typy zmiennych to: *string*, *int*, *float*, *bool*
 - Aby zmienić typ obiektu (o ile to możliwe) możemy dokonać **rzutowania** używając nazwy typu jako funkcji
+- Aby sprawdzić czy jakiś obiekt jest określonego typu używamy funkcji `isinstance`
 ---
 ---
 ---
