Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -1,5 +1,5 @@
 ### 2.1 Definiowanie zmiennych
-Aby przechować określoną wartość w pamięci komputera należy utworzyć **zmienną**. Zmienna to odniesienie (referencja) między pewną nazwą a wydzielonym w pamięci komputera miejscem, które przechowuje określoną wartość i do którego odwołujemy się poprzez użycie zmiennej. Zmienna może być m.in. typu tekstowego, liczbowego (liczba całkowita lub niecałkowita) czy logicznego. Ponieważ **Python jest językiem programowania typowanym dynamicznie**, nie trzeba deklarować typu zmiennej podczas jej definiowania.
+Aby przechować określoną wartość w pamięci komputera należy utworzyć **zmienną**. Zmienna to odniesienie (referencja) między pewną nazwą a wydzielonym w pamięci komputera miejscem, które przechowuje określoną wartość i do którego odwołujemy się poprzez użycie nazwy zmiennej. Zmienna może być m.in. typu tekstowego, liczbowego (liczba całkowita lub niecałkowita) czy logicznego. Ponieważ **Python jest językiem programowania typowanym dynamicznie**, nie trzeba deklarować typu zmiennej podczas jej definiowania.
 
 ---
 >Kiedy do tej samej zmiennej przypiszemy nową wartość, stara wartość zostaje zapomniana.
@@ -108,7 +108,7 @@ Powyższy kod zwróci wartość 3.14.
 ---
 &nbsp;
 ### 2.3 Typy
-Każdy obiekt w Pythonie jest obiektem określonego typu. Typ to cecha, która determinuje jakie operacje możemy wykonać na obiekcie i wiąże się z tym jakiego rodzaju dane on zawiera. KIlka najczęściej spotykanych typów to:
+Każdy obiekt w Pythonie jest obiektem określonego typu. Typ to cecha, która determinuje jakie operacje możemy wykonać na obiekcie i wiąże się z tym jakiego rodzaju dane on przechowuje. KIlka najczęściej spotykanych typów to:
 - *string* - czyli łańcuch znaków a więc tekst
 - *int* - czyli liczba całkowita (*integer*)
 - *float* - liczba zmiennoprzecinkowa (*floating point*) czyli taka, która posiada rozwinięcie dziesiętne
@@ -175,7 +175,7 @@ isinstance(no_value, type(None))
 
 # True
 ```
-Zmienna `no_value` jest instancją klasy *NoneType*, do której możemy się odnieść poprzez `type(None)`
+Zmienna `no_value` jest instancją klasy *NoneType*. Do tej klasy możemy się odnieść poprzez `type(None)`
 
 
 ```python
