--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -195,7 +195,7 @@ print(x)
 2
 
 ---
-Python umożliwia również pisanie instrukcji `if-else` w skrócony sposób:
+Python umożliwia również przypisywać wartości do zmiennych za pomocą skróconej wersji instrukcji `if-else`:
 ```python
 human_power = 4
 zombie_power = 3
