Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -63,7 +63,7 @@ initial_experience = 0  # początkowe doświadczenie
 
 Czasami dodanie komentarza jest dobrym sposobem na to aby dany fragment kodu był bardziej zrozumiały dla osoby, która do niego wraca, ale ogólna zasada pisania dobrego kodu jest taka, że kod powinien być "samokomentujący się", to znaczy że on sam tłumaczy co właśnie dzieje się w programie.
 
-Innym zastosowaniem komentarzy, którego również nie powinniśmy nadużywać jest komentowanie fragmentów kodu, którego tymczasowo nie planujemy używać ale nie chcemy go też trwale usuwać. Jest to przydatne na etapie testowania i eksperymentowania, ale na dłuższą metę zakomentowany kod nie powinien znajdować się w repozytorium (czyli "miejscu" gdzie składowany jest kod). 
+Innym zastosowaniem komentarzy, którego również nie powinniśmy nadużywać jest komentowanie fragmentów kodu, którego tymczasowo nie planujemy używać ale nie chcemy go też trwale usuwać. Jest to przydatne na etapie testów i eksperymentów, ale na dłuższą metę kod nie powinien pozostawać zakomentowany.
 
 ---
 
@@ -77,7 +77,7 @@ linii
 """
 ```
 
-Umieszczenie takiego stringa w kodzie działa podobnie jak komentarz blokowy, z tą różnicą że interpreter traktuje go jak pełnoprawnego stringa. Po prostu nie jest on przypisywany do żadnej zmiennej więc nie wpływa na działanie programu.
+Umieszczenie takiego stringa w kodzie działa podobnie jak komentarz blokowy, z tą różnicą że interpreter traktuje go jak pełnoprawny obiekt. Po prostu nie jest on przypisywany do żadnej zmiennej więc nie wpływa na działanie programu.
 
 ---
 **Komentarze - podsumowanie:**
@@ -99,22 +99,32 @@ Aby sprawdzić jakiego typu jest dany obiekt należy wywołać funkcję `type` p
 
 ```python
 type(character_class)
+
+# str
 ```
 
 ```python
 type(character_id)
+
+# int
 ```
 
 ```python
 type(x_position)
+
+# float
 ```
 
 ```python
 type(None)
+
+# NoneType
 ```
 
 ```python
-type(print)
+type(str)
+
+# type
 ```
 
 ---
@@ -123,18 +133,24 @@ Python pozwala również zamienić obiekt na podobny obiekt ale innego typu. Naz
 Przykładowo:
 ```python
 str(4)
+
+# '4'
 ```
-zwróci stringa '4'.
+
 
 ```python
 int(-12.48)
+
+# -12
 ```
-zwróci inta 12. Rzutowanie typu w tym przypadku polega na ucięciu cyfr po przecinku a nie zaokrągleniu do najbliższej liczby całkowitej.
+Rzutowanie typu w tym przypadku polega na ucięciu cyfr po przecinku a nie zaokrągleniu do najbliższej liczby całkowitej.
 
 ```python
 float(True)
+
+# 1.0
 ```
-zwróci 1.0, ponieważ wartości logicznej *True* odpowiada liczba 1, ale w tym przypadku zamieniamy ją na floata.
+Tutaj otrzymujemy 1.0 ponieważ wartości logicznej *True* odpowiada liczba 1, ale w tym przypadku zamieniamy ją na floata.
 
 Próba rzutowania niektórych typów zakończy się błędem programu. Nie możemy na przykład zrzutować stringa na inta.
 
@@ -211,16 +227,24 @@ Służy do wyświetlenia na ekranie określonej wartości, np. przechowywanej w 
 
 ```python
 print(character_class)
+
+# 'human'
 ```
 
 ```python
 print(character_id)
+
+# 4
 ```
 
 ```python
 print(1)
 print(2)
 print(3)
+
+# 1
+# 2
+# 3
 ```
 
 
@@ -229,6 +253,8 @@ Służy do sprawdzenia długości (liczby elementów) obiektów, które są sekw
 
 ```python
 len(character_class)
+
+# 5
 ```
 
 #### 2.4.3 Funkcja `round`
@@ -236,15 +262,16 @@ Aby zaokrąglić liczbę posiadającą rozwinięcie dziesiętne - taką jak np. 
 
 ```python
 round(3.1415926)
-```
 
-Powyższy kod zwróci wartość 3.
+# 3
+```
 
 ```python
 round(3.1415926, 2)
+
+# 3.14
 ```
 
-Powyższy kod zwróci wartość 3.14.
 
 ---
 **Funkcje wbudowane - podsumowanie:**
