Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -20,7 +20,7 @@ character_id = 4
 
 ```python
 x_position = 6.27
-y_position = -12.48
+y_position = -12.58
 ```
 
 ```python
@@ -139,7 +139,7 @@ str(4)
 
 
 ```python
-int(-12.48)
+int(-12.58)
 
 # -12
 ```
@@ -221,7 +221,7 @@ Funkcja to kawałek programu, który wykonuje określone zadanie. Mogą być one
 
 Użycie funkcji nazywa się **wywołaniem** (ang. *call*). Poznajemy je po **nawiasach okrągłych**, których obecność w kodzie jednak nie zawsze oznacza że właśnie wywołujemy funkcję. Do tych nawiasów możemy (ale nie musimy) przekazać jeden lub więcej **argument**. Więcej informacji na ten temat znajduje się w [[6. Funkcje|osobnej lekcji]].
 
-Kilka przykładowych funkcji wbudowanych to:
+`type` czy `isinstance` to przykłady funkcji wbudowanych. Kilka innych przykładów to:
 #### 2.4.1 Funkcja `print`
 Służy do wyświetlenia na ekranie określonej wartości, np. przechowywanej w zmiennej
 
