--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -289,22 +289,30 @@ round(3.1415926, 2)
 Operatory arytmetyczne - takie jak np. +, -, *, / itp. mają w Pythonie zastosowanie zgodne z tym jak działają one w kalkulatorach. Jeżel chcemy wykonać na dwóch liczbach operację arytmetyczną możemy zrobić to w bardzo intuicyjny sposób, np.:
 
 ```python
-2+2
+2 + 2
+
+# 4
 ```
 
 
 ```python
-3-1
+3 - 1
+
+# 2
 ```
 
 
 ```python
 5 / 2
+
+2.5
 ```
 
 
 ```python
 3 * 4
+
+# 12
 ```
 
 ---
@@ -312,19 +320,26 @@ Istnieje również kilka mniej standardowych operatorów, takich jak:
 
 ```python
 8 // 3
+
+# 2
 ```
 // - który zwróci część całkowitą z wyniku dzielenia. W powyższym przykładzie 2.
 
 ```python
 13 % 5
+
+# 3
 ```
 % - który zwróci resztę z dzielenia. W powyższym przykładzie 3.
 
 ```python
 2 ** 3
 pow(2, 3)
+
+# 8
+# 8
 ```
-**, który podobnie jak funkcja `pow` zwróci wynik podniesienia liczby do potęgi. W powyższym przykładzie 8.
+**, który podobnie jak funkcja wbudowana `pow` zwróci wynik podniesienia liczby do potęgi. W powyższym przykładzie 8.
 
 ---
 Podczas wykonywania obliczeń obowiązuje oczywiście kolejność wykonywania działań
@@ -335,6 +350,9 @@ x_velocity = 2
 time_unit = 1
 
 new_x_position = start_x_position + x_velocity * time_unit
+print(new_x_position)
+
+# 2
 ```
 
 ---
@@ -344,6 +362,8 @@ Kiedy chcemy zmienić (nadpisać) wartość zmiennej możemy zrobić to na przyk
 time_counter = 0
 
 time_counter = time_counter + 1
+
+# teraz zmienna 'time_counter' ma wartość 1
 ```
 
 co wydaje się być matematycznie sprzeczne, ale w rzeczywistości jest to po prostu operacja przypisania do zmiennej `time_counter` nowej wartości - o 1 większej od aktualnej wartości tej zmiennej.
@@ -354,6 +374,8 @@ Istnieje również inny - skrócony - zapis tej samej operacji, który jest rów
 time_counter = 0
 
 time_counter += 1
+
+# teraz zmienna 'time_counter' ma wartość 1
 ```
 
 ---
@@ -362,12 +384,12 @@ time_counter += 1
 
 Analogiczne operatory nadpisujące wartość zmiennej występują również dla pozostałych działań arytmetycznych. Działają one analogicznie.
 ```python
-x = 10
+x = 10    # x = 10
 
-x += 2
-x -= 4.1
-x *= 1.4
-x /= 5
+x += 2    # x = 12
+x -= 4.1  # x = 7.9
+x *= 1.4  # x = 11.06
+x /= 5    # x = 2.212
 ```
 
 ---
