Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -305,7 +305,7 @@ Operatory arytmetyczne - takie jak np. +, -, *, / itp. mają w Pythonie zastosow
 ```python
 5 / 2
 
-2.5
+# 2.5
 ```
 
 
@@ -458,7 +458,7 @@ Po wywołaniu wszystkich tych funkcji wartość zmiennej `experience_rule` nie u
 Ze stringów możemy wyciągać poszczególne znaki lub ich sekwencje na podstawie ich pozycji, zwanych także **indeksami**.
 
 ---
->Pozycje te (indeksy) numerujemy od 0, to znaczy że pierwszy znak stringa ma indeks 0. Stąd możemy go również nazywać "zerowym" znakiem, kolejny "pierwszym" itd. Błędna indeksacja stringów oraz innych sekwencji jest częstym błędem początkujących.
+>Pozycje (indeksy) numerujemy od 0, to znaczy że pierwszy znak stringa ma indeks 0. Stąd możemy go również nazywać "zerowym" znakiem, kolejny "pierwszym" itd. Błędna indeksacja stringów oraz innych sekwencji jest częstym błędem początkujących.
 ---
 
 Indeksy które chcemy wyciągnąć przekazujemy w **nawiasach kwadratowych**.  Dla przypomnienia - string na którym pracujemy to:
@@ -516,9 +516,10 @@ Jeśli wewnątrz stringa chcemy umieścić wartość jakiejś zmiennej, możemy 
 my_velocity = 4
 
 print(f"W każdej jednostce czasu pokonuję {my_velocity} jednostki odległości")
+
+# 'W każdej jednostce czasu pokonuję 4 jednostki odległości'
 ```
-`f` przed otwarciem cudzysłowa (pojedynczego lub podwójnego) oznacza że tworzymy f-stringa, natomiast w nawiasach klamrowych wewnątrz umieszczamy zmienną, która ma znaleźć się wewnątrz stringa. Powyższy kod wyprintuje następujący tekst:
-`'W każdej jednostce czasu pokonuję 4 jednostki odległości'`
+`f` przed otwarciem cudzysłowa (pojedynczego lub podwójnego) oznacza że tworzymy f-stringa, natomiast w nawiasach klamrowych wewnątrz umieszczamy zmienną, która ma znaleźć się wewnątrz stringa.
 
 Istnieje również inny sposób formatowania stringów, charakterystyczny dla starszych wersji Pythona:
 
@@ -526,6 +527,8 @@ Istnieje również inny sposób formatowania stringów, charakterystyczny dla st
 my_experience = 6
 
 "Moje doświadczenie wynosi {}".format(my_experience)
+
+# Moje doświadczenie wynosi 6
 ```
 
 
