--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -598,24 +598,28 @@ simple_list = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 Aby wyciągnąć pojedynczy element z listy przekazujemy jego indeks do nawiasów kwadratowych. Numerację zaczynamy od 0.
 ```python
 simple_list[2]
+
+# 2
 ```
-2
 
 ```python
 simple_list[0]
+
+# 0
 ```
-0
 
 Możemy również liczyć elementy od końca, wtedy indeksy są ujemne:
 ```python
 simple_list[-1]
+
+# 9
 ```
-9
 
 ```python
 simple_list[-2]
+
+# 8
 ```
-8
 
 ---
 Możliwe jest także wyciąganie przedziałów podając początek (*start*) i/lub koniec (*stop*) a także wyciąganie co któregoś elementu za pomocą kroku (*step*). Działa to według poniższego schematu:
@@ -632,74 +636,85 @@ default step: 1
 
 ```python
 simple_list[0:None:1]
+
+# [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 ```
-[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 
 ```python
 simple_list[::]
+
+# [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 ```
-[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 
 ```python
 simple_list[:]
+
+# [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 ```
-[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 
 ---
 
 ```python
 simple_list[1:4]
+
+# [1, 2, 3]
 ```
-[1, 2, 3]
 Wartość *stop* nie wchodzi do przedziału, stąd ostatni element to 3.
 
 ---
 ```python
 simple_list[2:]
-```
+
 [2, 3, 4, 5, 6, 7, 8, 9]
+```
 Od elementu o indeksie 2 do końca.
 
 ---
 ```python
 simple_list[:3]
+
+# [0, 1, 2]
 ```
-[0, 1, 2]
 Od początku do elementu o indeksie 3, ale nie wliczając jego samego.
 
 ---
 ```python
 simple_list[1:6:2]
+
+# [1, 3, 5]
 ```
-[1, 3, 5]
 Od elementu o indeksie 1 do 6 idąc co 2.
 
 ---
 ```python
 simple_list[:4:]
+
+# [0, 1, 2, 3]
 ```
-[0, 1, 2, 3]
 Od początku do elementu o indeksie 4. Wartość *step* nie została podana.
 
 ---
 ```python
 simple_list[::2]
+
+# [0, 2, 4, 6, 8]
 ```
-[0, 2, 4, 6, 8]
 Od początku do końca co drugi element.
 
 ---
 ```python
 simple_list[::-1]
+
+# [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
 ```
-[9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
 Od początku do końca co 1 ale idąc wstecz (ujemny *step*).
 
 ---
 ```python
 simple_list[::-2]
+
+# [9, 7, 5, 3, 1]
 ```
-[9, 7, 5, 3, 1]
 Od początku do końca co 2 ale idąc wstecz.
 
 ---
@@ -708,7 +723,7 @@ Od początku do końca co 2 ale idąc wstecz.
 - Numeracja elementów zaczyna się od 0
 - Ujemne indeksy oznaczają pozycję liczoną od końca
 - Aby wyciągnąć zakres używając *start*, *stop* i *step* używamy notacji z dwukropkami, tzn. dla listy a: a[start:stop:step]. Nie musimy podawać wszystkich trzech znaczników jeśli odpowiednio użyjemy dwukropków
-- Ujemny *step* oznacza odwrotną kolejność wyciąganych elementów
+- Ujemny *step* oznacza odwrotną kolejność wyciąganych elementówx
 ---
 ---
 ---
