--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -446,6 +446,7 @@ print(human_character)
 # wyciąga wartość, która znajduje się pod danym kluczem
 human_character["class"]  # 'Human'
 
+human_character.get("velocity")  # 10.1
 human_character.get("power")  # None
 human_character.get("power", 0)  # 0
 ```
@@ -756,6 +757,8 @@ list_of_zombies = [
 Aby wyciągnąć z tej struktury współrzędną x położenia zombie o indeksie 1 należy użyć poniższej notacji:
 ```python
 list_of_zombies[1]["x"]
+
+# -1.1
 ```
 
 Najpierw wyciągamy element o indeksie 1 a następnie wartość pod kluczem "x"
@@ -781,11 +784,15 @@ simulation_config = {
 Aby wyciągnąć listę początkowych położeń ludzi posługujemy się zapisem:
 ```python
 simulation_config["humans_start_positions"]
+
+# [(1, 1), (3, 2), (5, -3), (0, 4)]
 ```
 
 natomiast żeby wyciągnąć współrzędną x ostatniego człowieka:
 ```python
 simulation_config["humans_start_positions"][-1][0]
+
+# 0
 ```
 
 ---
@@ -816,35 +823,39 @@ Samo wywołanie zipa zwróci obiekty typu `zip`: `<zip at 0x7f1c15715300>`. Jeś
 list(zip(x_coordinates, y_coordinates))
 ```
 Otrzymamy listę tupli będących parami elementów z list `x_coordinates` oraz `y_coordinates` czyli:
-[(2, 3), (5, 6), (3, 1)]
+`[(2, 3), (5, 6), (3, 1)]`
 
 Liczba sekwencji przekazanych do zipa może być dowolna. Jeśli sekwencje te będą miały różną liczbę elementów, `zip` zwróci listę o długości równej najkrótszej z sekwencji:
 
 ```python
 list(zip((1, 2, 3), ("a", "b", "c", "d"), (10, 20)))
+
+# [(1, 'a', 10), (2, 'b', 20)]
 ```
-[(1, 'a', 10), (2, 'b', 20)]
 
 #### 3.8.2 `enumerate`
 Generator `enumerate` przyjmuje jako argument jedną sekwencję i zwraca obiekt typu `enumerate`:
 ```python
 enumerate(x_coordinates)
+
+# <enumerate at 0x7fb39ca4d800>
 ```
-<enumerate at 0x7fb39ca4d800>
 
 Podobnie jak w przypadku zipa, możemy zrzutować go na listę:
 ```python
 list(enumerate(x_coordinates))
+
+# [(0, 2), (1, 5), (2, 3)]
 ```
-[(0, 2), (1, 5), (2, 3)]
 
 Otrzymujemy listę tupli - par wartości. Na każdą parę składa się indeks danego elementu wyjściowej listy oraz sam ten element.
 
 Możemy również zacząć sekwencję indeksów od innej wartości niż domyślne 0:
 ```python
 list(enumerate(x_coordinates, start=6))
+
+# [(6, 2), (7, 5), (8, 3)]
 ```
-[(6, 2), (7, 5), (8, 3)]
 
 ---
 Generatory `zip` oraz `enumerate` przydają się między innymi w [[5. Pętle|pętlach]], o których będzie później. Można je wykorzystać również na przykład do stworzenia słownika:
@@ -854,14 +865,16 @@ humans_ids = [1, 2, 3, 4]
 infection_statuses = [True, False, False, False]
 
 dict(zip(humans_ids, infection_statuses))
+
+# {1: True, 2: False, 3: False, 4: False}
 ```
 
-{1: True, 2: False, 3: False, 4: False}
 
 ```python
 dict(enumerate(infection_statuses))
+
+# {0: True, 1: False, 2: False, 3: False}
 ```
-{0: True, 1: False, 2: False, 3: False}
 
 ---
 **Wbudowane generatory cz. 1 - podsumowanie:**
