Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -101,6 +101,8 @@ numbers_of_zombies = 0
 
 if numbers_of_zombies ＝＝ 0:
     print("Symulacja skończona, wygrali ludzie")
+
+#  'Symulacja skończona, wygrali ludzie'
 ```
 
 ```python
@@ -108,6 +110,8 @@ list_of_humans = []
 
 if len(list_of_humans) ＝＝ 0:
     print("Symulacja skończona, wygrali zombie")
+
+# 'Symulacja skończona, wygrali zombie'
 ```
 
 ```python
@@ -116,11 +120,15 @@ zombie_power = 6
 
 if human_power < zombie_power:
     print("Walkę wygrywa zombie")
+
+# 'Walkę wygrywa zombie'
 ```
 
 ```python
 if human_power > zombie_power:
     print("Walkę wygrywa człowiek")
+
+# 'Walkę wygrywa człowiek'
 ```
 
 ---
@@ -130,20 +138,23 @@ Warunkiem logicznym w instrukcji warunkowej może być nie tylko wyrażenie, kt
 ```python
 if not []:    # not [] --> not False --> True
     print("Pusta lista")
+
+# 'Pusta lista'
 ```
-Pusta lista
 
 ```python
 if not "":  # not "" --> not False --> True
     print("Pusty string")
+
+# 'Pusty string'
 ```
-Pusty string
 
 ```python
 if not 0:   # not 0 --> not False --> True
     print("Zero")
+
+# 'Zero'
 ```
-Zero
 
 ---
 **Instrukcja `if` - podsumowanie:**
@@ -164,8 +175,10 @@ if number_of_zombies ＝＝ 0 or number_of_humans ＝＝ 0:
     print("Koniec symulacji")
 else:
     print("Symulacja trwa nadal")
+
+# 'Koniec symulacji'
 ```
-"Koniec symulacji"
+
 
 ```python
 human_experience = 3
@@ -178,8 +191,9 @@ else:
     
 
 print(f"Wartość doświadczenia po bitwie: {human_experience}")
+
+# 'Wartość doświadczenia po bitwie: 4'
 ```
-Wartość doświadczenia po bitwie: 4
 
 ---
 ```python
@@ -191,8 +205,9 @@ else:
     x *= 2
 
 print(x)
+
+# 2
 ```
-2
 
 ---
 Python umożliwia również przypisywać wartości do zmiennych za pomocą skróconej wersji instrukcji `if-else`:
@@ -201,6 +216,9 @@ human_power = 4
 zombie_power = 3
 
 winner = "human" if human_power > zombie_power else "zombie"
+print(winner)
+
+# 'human'
 ```
 
 ---
